<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tv"
        android:gravity="center"
        android:text="@string/tv_1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv2"
        app:layout_constraintEnd_toStartOf="@+id/tv2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_tv"
        android:fontFamily="@font/vazir_regular"
        android:gravity="end"
        android:text="@string/tv2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableEndCompat="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_tv"
        android:fontFamily="@font/vazir_regular"
        android:gravity="center"
        android:text="@string/tv_3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_money__1_"
        app:layout_constraintBottom_toTopOf="@+id/img1"
        app:layout_constraintEnd_toStartOf="@+id/tv4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_tv"
        android:fontFamily="@font/vazir_thin"
        android:gravity="center"
        android:text="@string/tv3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_money"
        app:layout_constraintBottom_toBottomOf="@+id/tv3"
        app:layout_constraintEnd_toStartOf="@+id/tv5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toTopOf="@+id/tv3" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_tv"
        android:fontFamily="@font/vazir_regular"
        android:gravity="center"
        android:text="@string/tv4"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableEndCompat="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toTopOf="@+id/tv4" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_btn"
        android:fontFamily="@font/vazir_regular"
        android:text="@string/tv_5"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/img1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_btn"
        android:fontFamily="@font/vazir_regular"
        android:text="@string/btn_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tv6"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="300dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/img1_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/marvel_avengers_game_png_image_file" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="100dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="290dp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_tv2"
        android:fontFamily="@font/vazir_regular"
        android:gravity="center"
        android:text="@string/tv_6"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="@+id/tv5"
        app:layout_constraintStart_toStartOf="@+id/tv3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="430dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="620dp" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/vazir_thin"
        android:text="@string/tv_7"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv8"
        app:layout_constraintTop_toTopOf="@+id/tv8" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/vazir_thin"
        android:text="@string/tv_8"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/img3"
        app:layout_constraintEnd_toStartOf="@+id/tv7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img2_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv8"
        app:layout_constraintStart_toStartOf="@+id/tv8"
        app:srcCompat="@drawable/ic_instagram_icon_5"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img3_content"
        app:layout_constraintBottom_toBottomOf="@+id/img3"
        app:layout_constraintEnd_toEndOf="@+id/tv7"
        app:layout_constraintStart_toStartOf="@+id/tv7"
        app:layout_constraintTop_toTopOf="@+id/img3"
        app:srcCompat="@drawable/ic_twitter"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_tv4"
        android:contentDescription="@string/img4_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_polar_bear"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>